--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@vercel/og": "^0.6.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "embla-carousel-autoplay": "^8.0.2",
+    "embla-carousel-react": "^8.0.2",
     "next": "^14.0.4",
     "react": "^18",
     "react-dom": "^18",
