--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "clsx": "^2.1.0",
     "embla-carousel-autoplay": "^8.0.2",
     "embla-carousel-react": "^8.0.2",
+    "lucide-react": "^0.536.0",
     "next": "^14.0.4",
     "react": "^18",
     "react-dom": "^18",
